@@ -1,3 +1,8 @@
+2005-01-22  Steve Harris  <steve@plugin.org.uk>
+
+	* address.c: fixed bug when determining protocol of URL with
+	  unspecified sub-protocol. Reported by Pix.
+
 2005-01-13  Steve Harris  <steve@plugin.org.uk>
 
 	* bundle.c: patch from Dave Robillard that fixes bundles of more than 4
